--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
         <div class="arm-left"></div>
         <div class="arm-right"></div>
-        <div class="d-pad"></div>
+        <div class="d-pad-1"></div>
+        <div class="d-pad-2"></div>
         <div class="a"></div>
         <div class="b"></div>
         <div class="start"></div>
